[metadata]
name = ros2_unbag
version = 0.0.1
description = Plugin for ros2 bag export. Supports pluggable export routines.
author = Lukas Ostendorf
license = TODO

[options]
packages = find:
install_requires =
    ros2cli
    PySide6
    rclpy
    rosbag2_py
    rosidl-runtime-py
    opencv-python-headless==4.11.0.86
zip_safe = False

[options.entry_points]
ros2cli.command =
    unbag = ros2_unbag.export:ExportCommand

ros2cli.extension_point =
    ros2_unbag.command = ros2cli.command:CommandExtension

[options.package_data]
ros2_unbag.ui = 
    loading.gif
    title.png