[metadata]
name = ros2_unbag
version = 0.0.4
description = A ROS 2 tool for exporting bags to human readable files. Supports pluggable export routines to handle any message type. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Lukas Ostendorf
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    pyyaml
    numpy==1.26.4
    opencv-python-headless==4.11.0.86
    PySide6
zip_safe = False

[options.entry_points]
ros2cli.command =
    unbag = ros2_unbag.export:ExportCommand

ros2cli.extension_point =
    ros2_unbag.command = ros2cli.command:CommandExtension

[options.package_data]
ros2_unbag.ui = 
    assets/loading.gif
    assets/title.png